envoy/envoy.yaml
static_resources:
  listeners:
  - address:
      socket_address: { address: 0.0.0.0, port_value: 8000 }
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          codec_type: auto
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: backend
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/grpc.health.v1.Health/Check"
                  headers:
                    - name: content-type
                      exact_match: application/grpc
                route:
                  cluster: check-grpc
                  retry_policy:
                    retry_on: "5xx,connect-failure,refused-stream,cancelled,deadline-exceeded,resource-exhausted"
                    num_retries: 3
                    per_try_timeout_ms: 1000
              - match:
                  prefix: "/helloworld.Greeter/SayHello"
                  headers:
                    - name: content-type
                      exact_match: application/grpc
                route:
                  cluster: hello-grpc
                  retry_policy:
                    retry_on: "5xx,connect-failure,refused-stream,cancelled,deadline-exceeded,resource-exhausted"
                    num_retries: 3
                    per_try_timeout_ms: 1000
          access_log:
          - name: envoy.file_access_log
            config:
              path: "/dev/stdout"
          http_filters:
          - name: envoy.router
            config: {}
  clusters:
  - name: check-grpc
    connect_timeout: 0.25s
    lb_policy: round_robin
    http2_protocol_options: {}
    type: strict_dns
    hosts:
    - socket_address: { address: app, port_value: 8000 }
  - name: hello-grpc
    connect_timeout: 0.25s
    lb_policy: round_robin
    http2_protocol_options: {}
    type: strict_dns
    hosts:
    - socket_address: { address: app2, port_value: 8000 }
admin:
  access_log_path: /dev/null
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8001
